Fixed .wrap padding issue on Work taxonomy archive pages

--- a/web/app/themes/theagsc/assets/styles/common/_global.less
+++ b/web/app/themes/theagsc/assets/styles/common/_global.less
@@ -60,7 +60,7 @@ a:focus {text-decoration: none !important; color:@green;}
 }
 .wrap .content {
 	margin:0 auto;
-	max-width:1300px;
+	max-width:1280px;
 }
 
 .home .wrap {z-index: 9999;}
@@ -75,7 +75,7 @@ a:focus {text-decoration: none !important; color:@green;}
 	}
 }
 @media @sm {
-	.single .wrap, .page .wrap, .category .wrap,  .post-type-archive-work .wrap {padding:20px 40px 0px 40px;}
+	.single .wrap, .page .wrap, .category .wrap,  .post-type-archive-work .wrap, .tax-type .wrap {padding:20px 40px 0px 40px;}
 }
 
 .home .wrap {margin-top: auto;}
